--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
-#root {
+/*Importerer font*/
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap');
+
+/*#root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -16,7 +19,95 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
+}*/
+
+/* CSS fra arbeidskrav 2*/
+
+
+
+/*Lager variabler til fargene */
+:root {
+    --darkblue: #2A324B;
+    --blue: #58699D;
+    --grey: #E1E5EE;
+    --white: #fff;
 }
+
+/*Styler body elementet og gjør det responsivt. */
+body{
+    background-color: var(--grey);
+    font-family: 'Rubik', 'sans-serif';
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+/*Styler div elementet med id-en container med farge, størrelser og margin */
+#container{
+    max-width: 944px;
+    min-height: 300px;
+    background-color: var(--white);
+    padding: 3rem 3rem 5rem 5rem;
+}
+
+#container li{
+  margin-bottom: 1rem;
+}
+
+/*Styler og finner posisjon for elementene inni nav for å samsvare med skissen til oppgaven. */
+nav{
+    background-color: var(--grey);
+    padding-top: 1rem;
+}
+nav ul{
+    list-style-type: none;
+    display: flex;
+    padding: 0;
+    margin: 0;
+    justify-content: space-between;
+}
+nav a{
+    display: inline-block;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight:bold;
+    padding: 1rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    background-color: var(--darkblue); 
+}
+
+#info a{
+  color: var(--white);
+}
+
+/*Endrer farge på det elementete som er aktivt   */
+#info .active{
+    background-color: var(--white);
+    color: var(--darkblue); 
+}
+
+/* Styler main med margin og farger */
+main{
+    margin: 5rem;
+}
+main a{
+    color: var(--blue);
+}
+main h2{
+    color:var(--darkblue);
+}
+
+/* Gjør mobilversjon mer brukervennlig */
+@media(max-width: 750px){
+    nav ul{
+        display: block;
+    }
+    #container{
+      padding: 2rem;
+    }
+}
+
 
 @keyframes logo-spin {
   from {
