--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap");
 :root {
   --darkblue: #2A324B;
   --blue: #58699D;
@@ -17,8 +18,8 @@ body {
 
 /*Styler div elementet med id-en container med farge, størrelser og margin */
 #container {
-  max-width: 944px;
-  min-height: 300px;
+  width: 944px;
+  max-width: auto;
   background-color: var(--white);
   padding: 3rem 3rem 5rem 5rem;
 }
@@ -71,15 +72,15 @@ main h2 {
 }
 
 /* Gjør mobilversjon mer brukervennlig */
-@media (max-width: 750px) {
+@media (max-width: 1050px) {
   nav ul {
     display: block;
   }
   #container {
-    padding: 2rem;
+    width: 100%;
   }
 }
-@keyframes logo-spin {
+/*@keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -87,17 +88,15 @@ main h2 {
     transform: rotate(360deg);
   }
 }
+
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
 }
-.card {
-  padding: 2em;
-}
 
 .read-the-docs {
   color: #888;
-}
+}*/
 
 /*# sourceMappingURL=main.css.map */
