--- a/src/css/sass/_mediaquery.scss
+++ b/src/css/sass/_mediaquery.scss
@@ -1,14 +1,13 @@
-@media(max-width: 750px){
+@media(max-width: 1050px){
     nav ul{
         display: block;
     }
     #container{
-      padding: 2rem;
+      width: 100%;
     }
 }
 
-
-@keyframes logo-spin {
+/*@keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -23,10 +22,6 @@
   }
 }
 
-.card {
-  padding: 2em;
-}
-
 .read-the-docs {
   color: #888;
-}
+}*/
