--- a/src/css/sass/main.scss
+++ b/src/css/sass/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap');
+
 @import 'colors';
 
 /*Styler body elementet og gjør det responsivt. */
@@ -11,8 +13,8 @@ body{
 
 /*Styler div elementet med id-en container med farge, størrelser og margin */
 #container{
-    max-width: 944px;
-    min-height: 300px;
+    width: 944px;
+    max-width: auto;
     background-color: var(--white);
     padding: 3rem 3rem 5rem 5rem;
 
